# StudyAppRunner

./: AGENTS.md  CONTEXT.md  README.md  REVIEW.md  pyproject.toml
src/app/: README.md
src/app/applications/ports/: __init__.py  grpc_port.py  runtime_port.py
src/app/applications/usecase/: __init__.py  create_runtime.py  dependencies.py  dto.py  remove_runtime.py
src/app/configs/: config.py
src/app/domain/models/: __init__.py
src/app/domain/models/runtime/: __init__.py  enum.py
src/app/domain/models/runtime/entities/: __init__.py  runtime.py  runtime_definition.py  runtime_resource_id.py  runtime_spec.py
src/app/domain/models/session/: __init__.py  entities.py  enum.py
src/app/domain/repositories/: __init__.py  runtime_repositories.py  session_repositories.py
src/app/exceptions/: __init__.py  exceptions.py
src/app/infra/runtime/: __init__.py  docker_runtime_adapter.py
src/tests/: README.md
src/tests/endpoints/: README.md
src/tests/integration/infra/: conftest.py  parameters.py  test_docker_runtime_adapter_integration.py
src/tests/unit/applications/usecase/: conftest.py  parameters.py  test_create_runtime.py  test_remove_runtime.py
src/tests/unit/domain/: conftest.py  parameters.py  test_runtime.py  test_session.py
src/tests/unit/infra/: conftest.py  parameters.py  test_docker_runtime_adapter.py
