[project]
name = "studyapprunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "alembic>=1.18.4",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "src/app/**/*.py",
    "src/test/**/*.py",
]
extend-exclude = [
    "alembic",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.pytest.ini_options]
testpaths = [
    "src/test/unit",
]
markers = [
    "integration: tests that require a real PostgreSQL database",
]
