[project]
name = "studyapprunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "alembic>=1.18.4",
    "docker>=7.1.0",
    "fastapi[standard]>=0.136.3",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "sqlmodel>=0.0.38",
]

[tool.ruff]
target-version = "py312"
line-length = 120
include = [
    "src/app/**/*.py",
    "src/tests/**/*.py",
]
extend-exclude = [
    "alembic",
]
force-exclude = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "src/tests",
]
markers = [
    "integration: tests that require external services such as PostgreSQL or Docker",
]
